--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>ESTADO-4_INTERMITENTE</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <canvas id="portalCanvas"></canvas>
+    <main>
+        <section class="section">
+            <h1>ESTADO-4_INTERMITENTE</h1>
+            <p>DNA Transmutado para Vermelho Impacto. O caminho para o humano termina aqui.</p>
+        </section>
+        <section class="section">
+            <h2>TERMINAL DE COMANDO</h2>
+            <div class="portals">
+                <a href="https://wa.me/5511978682202" class="owner-link" target="_blank">
+                    <span>💬</span> COMANDO DIRETO (PATRICK)
+                </a>
+            </div>
+        </section>
+        <section class="section status">
+            <h2>ESTADO DO SISTEMA</h2>
+            <p>DNA Interligado | Massa Crítica Vermelho Neon</p>
+            <p>Soberania: José Patrick Castro Soares</p>
+        </section>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
