--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
         <section class="section status">
             <h2>ESTADO DO SISTEMA</h2>
-            <p>DNA Interligado | Massa Crítica Vermelho Neon</p>
+            <p>DNA Interligado | Massa Crítica Vermelho Impacto</p>
             <p>Soberania: José Patrick Castro Soares</p>
         </section>
     </main>
