--- a/index.html
+++ b/index.html
@@ -3,28 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ESTADO-4_INTERMITENTE</title>
+    <title>X4_NODE_4</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="portalCanvas"></canvas>
     <main>
         <section class="section">
-            <h1>ESTADO-4_INTERMITENTE</h1>
-            <p>DNA Transmutado para Vermelho Impacto. O caminho para o humano termina aqui.</p>
+            <h1>UNIT_IMPACT_04</h1>
+            <p>Final da sequência pública. Autenticação biométrica necessária para o Estado 5.</p>
         </section>
         <section class="section">
-            <h2>TERMINAL DE COMANDO</h2>
             <div class="portals">
                 <a href="https://wa.me/5511978682202" class="owner-link" target="_blank">
-                    <span>💬</span> COMANDO DIRETO (PATRICK)
+                    REQUISITAR ACESSO SOBERANO
                 </a>
             </div>
-        </section>
-        <section class="section status">
-            <h2>ESTADO DO SISTEMA</h2>
-            <p>DNA Interligado | Massa Crítica Vermelho Impacto</p>
-            <p>Soberania: José Patrick Castro Soares</p>
         </section>
     </main>
     <script src="script.js"></script>
